<resources>
    <string name="facebook_app_id" translatable="false">1777348322521293</string>
    <string name="app_name">EntregoUser</string>
    <string name="login_with_fb">Log in with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="er_default_network_error">Cannot connection to server</string>
    <string name="error_empty_fields">Missed required fields</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cancel_delivery_message">Do you really want to cancel?</string>
    <string name="ui_success_cancellation">Successful cancellation!</string>
    <string name="font_fontFamily_medium" translatable="false">sans-serif-medium</string>
    <string name="ui_progress_dialog_title">Loading…</string>
    <string name="ui_loading">Please, wait a second</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="ui_error_email">Invalid email</string>
    <string name="ui_error_password">Invalid password</string>
    <string name="ui_forgot_password">Forgot password</string>
    <string name="ui_login">login</string>
    <string name="ui_registration">registration</string>
    <string name="ui_descr_to_restore">Enter your email\n to restore your password</string>
    <string name="ui_restore">restore</string>
    <string name="ui_back_to_auth">back to login</string>
    <string name="ui_success_restore">We sent you an email \n to restore your password</string>
    <string name="hint_name">Name</string>
    <string name="hint_password_conf">Repeat password</string>
    <string name="hint_phone">Phone number</string>
    <string name="ui_i_have_account">i already have an account</string>
    <string name="hint_phone_code">code</string>
    <string name="ui_success_regist">Almost done! \n To finish you register click the link we send to your email.</string>
    <string name="back_to_auth">back to login</string>
    <string name="error_email_registered">Email already registered</string>
    <string name="error_passwords_not_equals">Password mismatch</string>
    <string name="logo">logo</string>
    <string name="title_activity_root">Map</string>
    <string name="action_faq">FAQ</string>
    <string name="shipment">Shipment</string>
    <string name="deliver">Buy / Deliver</string>
    <string name="transactions">Transactions</string>
    <string name="contact_support">Something goes wrong. Contact support</string>
    <string name="select_service">Select your service</string>
    <string name="type_shipment">Select type:</string>
    <string name="express">Express</string>
    <string name="all_day">All day</string>
    <string name="booking">Booking</string>
    <string name="size">Size</string>
    <string name="size_moto" translatable="false"> - 45 x 55 x 55 cm</string>
    <string name="size_auto" translatable="false">+ 55 x 45 x 55 cm</string>
    <string name="type_transaction">Type of transaction</string>
    <string name="documents">Documents</string>
    <string name="text_package">Package</string>
    <string name="type_deliver">Type of delivery</string>
    <string name="restaurant">Restaurant</string>
    <string name="other_shipents">Other shipments</string>
    <string name="after_12md">After 12 MD</string>
    <string name="before_12md">Before 12 MD</string>
    <string name="error_date_in_past">Selected date couldn\'t be in past</string>
    <string name="error_time_in_past">Selected time couldn\'t be in past</string>
    <string name="hint_address">Input name</string>
    <string name="hint_address_to">To:</string>
    <string name="hint_address_from">From:</string>
    <string name="text_return">Return</string>
    <string name="multishipment">Multi-shipment</string>
    <string name="share_route">Sahre route</string>
    <string name="add_code">Add code</string>
    <string name="text_share">Share</string>
    <string name="text_edit">Edit</string>
    <string name="hire_delivery">Hire a delivery</string>
    <string name="payments_methods">Payment methods</string>
    <string name="favorites">Favorites</string>
    <string name="my_deliveries">My deliveries</string>
    <string name="users_manual">User\'s manual</string>
    <string name="frequent_question">Frequently Asked Questions</string>
    <string name="text_contact">Contact</string>
    <string name="work_for_us">Work for us</string>
    <string name="term_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="btn_change_password">change password</string>
    <string name="text_save">save</string>
    <string name="save_password">save password</string>
    <string name="itbms_not_included">ITBMS not included</string>
    <string name="title_activity_escort">Map</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_status">Status</string>
    <string name="support_email" translatable="false">hola@entregoya.com</string>
    <string name="send_email">Send by…</string>
    <string name="express_label">Deliver in:</string>
    <string name="express_now">Now!</string>
    <string name="express_30_min">30 minutes</string>
    <string name="express_45_min">45 minutes</string>
    <string name="express_60_min">60 minutes</string>
    <string name="text_accept">Accept</string>
    <string name="text_ok">OK</string>
    <string name="text_total">Total</string>
    <string name="text_score_service">Score the service</string>
    <string name="hint_leave_comment">(140 characters max)</string>
    <string name="text_send">send</string>
    <string name="text_add_credit_card">+ Add credit card</string>
    <string name="text_add_money_to_wallet">+ Add money to wallet</string>
    <string name="text_ukrainian_code" translatable="false">380</string>
    <string name="hint_card_number">Card number</string>
    <string name="text_scan_card">Scan your card</string>
    <string name="text_save_card">Save credit card</string>
    <string name="tab_on_the_way">On the way</string>
    <string name="tab_history">History</string>
    <string name="error_invalid_addresses_count">Should be at least two addresses</string>
    <string name="error_invalid_address_with_index">Address #%1$2d is invalid</string>
    <string name="error_required_field">This field is requered</string>
    <string name="text_score">Score</string>
    <string name="text_incidents">Incidents</string>
    <string name="text_bill">Bill</string>
    <string name="text_price">Price</string>
    <string name="error_no_messenger_yet">No messenger yet</string>
    <string name="error_no_call_permissions">Need your permission on phone calls</string>
    <string name="text_min">min</string>
    <string name="status_on_the_way">On the way</string>
    <string name="status_waiting_for_ship">Waiting for the shipment</string>
    <string name="status_ship_on_way">Shipment on the way</string>
    <string name="status_waiting_for_delivery">Waiting for delivery</string>
    <string name="status_delivered">Delivered</string>
    <string name="search_title">Input name…</string>
    <string name="autocomplete_title">Select address</string>
    <string name="error_no_connection_with_google">No connection with google services</string>
    <string name="text_add_favorites">+ Add to Favorites</string>
    <string name="text_add_favorites_title">Enter title for favorite place</string>
    <string name="text_add">Add</string>
    <string name="text_dismiss">dismiss</string>
    <string name="text_home">Home</string>
    <string name="text_work">Work</string>
    <string name="user_conditions_title">User conditions</string>
    <string name="user_conditions_text">El prestatario del servicio es la empresa SPEED ON DEMAND, S.A., es una sociedad anónima panameña inscrita en el Registro Público de Panamá bajo el folio 155634002, en adelante la empresa, por otra parte está EL USUARIO quien es cualquier persona que acceda a o use el Servicio o la Aplicación. En tal
sentido ambas partes suscriben este contrato bajo las siguientes condiciones que son de estricto
cumplimiento y se definen de la siguiente forma:\n\n
\n\n
IMPORTANTE Al descargar y utilizar esta aplicación el usuario, acepta automáticamente las condiciones establecidas en ellos.
\n\n
Estas condiciones de uso serán aplicables y de
obligatorio cumplimiento para usted por la mera visita y uso de parte suya de la página web
http://www.entregoya.com el Servicio y la Aplicación, así como a toda la información, recomendaciones o servicios prestados en o a través la página web, el Servicio y la Aplicación.
\n\n
Podrá conocer las Condiciones del Usuario
Íntegramente en los legales de nuestro sitio web
http://www.entregoya.com.
\n\n
Fecha de actualización de las Condiciones del
Usuario 18/10/2016</string>
    <string name="about_entrego_title">About EntreGO</string>
    <string name="text_working_hours">Working hours</string>
    <string name="text_working_hours_value">Mon - Sun 7:30 am - 10:00 pm</string>
    <string name="text_talk_with_agent">Talk with an Agent</string>
    <string name="text_send_by">Send email</string>
    <string name="link_entrego_facebook" translatable="false">https://www.facebook.com/entreGOya/</string>
    <string name="link_entrego_insta" translatable="false">https://www.instagram.com/entreGOya/</string>
    <string name="link_entrego_youtube" translatable="false">https://www.youtube.com/channel/UC38z2WAKqdKe2tZioqW8HIw</string>
    <string name="link_entrego_twitter" translatable="false">https://twitter.com/entregoya</string>
    <string name="work_for_us_title">Work for Us</string>
    <string name="work_for_us_message" translatable="false">EntreGO es una plataforma que te conecta automáticamente con miles de clientes a través de tu smartphone en el horario que tu decidas y de la forma mas sencilla, esta aplicación te ayudará a generar nuevos ingresos y vas a poder ser al fin tu propio jefe.</string>
    <string name="text_share_video">Share Video</string>
    <string name="success_profile_update">Profile have been updated</string>
    <string name="about_entrego_text">En entreGO estamos transformando la mensajería de ultima milla, permitiendo que cualquier persona pueda enviar o recibir lo que quiera, cuando quiera. Nuestra revolucionaria plataforma bajo demanda conecta a comercios y particulares con una amplia red de mensajeros independientes a través de tu smartphone o computadora. En segundos y de una manera fácil y segura podrás solucionar todos tus problemas de mensajería conociendo en todo momento la ubicación de tu pedido en tiempo real.</string>
    <string name="message_delivery_have_canceled">Order have been canceled</string>
    <string name="text_user_licence">User License</string>
    <string name="text_copyriting_text" translatable="false">“Copyright” El autor o el que ostenta este derecho, se reserva todos los derechos y por lo tanto nadie puede hacer nada, fuera de las excepciones previstas por la ley, sin tener permiso expreso y generalmente por  escrito, del autor o del tenedor de dicho derecho.</string>
    <string name="text_politics_title">Politics to apply</string>
</resources>