<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_type_transaction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_background_four_elements"
    android:paddingBottom="22dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_small"
            android:text="@string/express_label" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/express_builder_now"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express_now" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/express_builder_30"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express_30_min" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/express_builder_45"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express_45_min" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/express_builder_60"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express_60_min" />


    </LinearLayout>
</FrameLayout>