<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_type_shipment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_background_four_elements"
    android:paddingBottom="20dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select_service_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_small"
            android:text="@string/type_shipment" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/type_shipment_express"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/type_shipment_all_day"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_day" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/type_shipment_booking"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking" />
    </LinearLayout>
</FrameLayout>