<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_type_transaction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_background_three_elements"
    android:paddingBottom="12dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select_service_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_small"
            android:text="@string/type_transaction" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/type_transaction_document"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documents" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_grey_line" />

        <TextView
            android:id="@+id/type_transaction_package"
            style="@style/ClickableLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_package" />

    </LinearLayout>
</FrameLayout>