<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logfb_edit_email_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/logfb_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@+id/logfb_edit_phone_code" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logfb_edit_email_il"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/logfb_edit_phone_code_il"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/logfb_edit_phone_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/hint_phone_code"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/logfb_edit_phone_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/logfb_edit_phone_number_il"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/logfb_edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>